--- a/spectec/tutorial/tutorial.tex
+++ b/spectec/tutorial/tutorial.tex
@@ -404,62 +404,46 @@ rule Step/binop-add-i64:
 \end{lcverbatim}
 Now, we can combine them using the function \K{size} and metavariable \K{t}:
 \begin{lcverbatim}
+def $iadd(N, iN(N), iN(N)) : iN(N)
 rule Step/binop-add:
-z; (CONST t c_1) (CONST t c_2) (BINOP t ADD)  ~>  z; (CONST t c)
--- if $iadd($size(t), c_1, c_2) = c
+  z; (CONST t c_1) (CONST t c_2) (BINOP t ADD)  ~>  z; (CONST t c)
+  -- if $iadd($size(t), c_1, c_2) = c
 \end{lcverbatim}
-We can do similarly with the case where \K{valtype} is \K{I64}:
-Answer:
+We can do similarly with the case where \K{binop\_(valtype)} is \K{SUB} and \K{MUL}:
+\begin{lcverbatim}
+def $iadd(N, iN(N), iN(N)) : iN(N)
+def $isub(N, iN(N), iN(N)) : iN(N)
+def $imul(N, iN(N), iN(N)) : iN(N)
+
+rule Step/binop-add:
+  z; (CONST t c_1) (CONST t c_2) (BINOP t ADD)  ~>  z; (CONST t c)
+  -- if $iadd($size(t), c_1, c_2) = c
+
+rule Step/binop-sub:
+  z; (CONST t c_1) (CONST t c_2) (BINOP t SUB)  ~>  z; (CONST t c)
+  -- if $isub($size(t), c_1, c_2) = c
+
+rule Step/binop-mul:
+  z; (CONST t c_1) (CONST t c_2) (BINOP t MUL)  ~>  z; (CONST t c)
+  -- if $imul($size(t), c_1, c_2) = c
+\end{lcverbatim}
+Now, we can combine them by declaring a new function \K{binop} as follows:
 {\color{red}
 	\begin{lcverbatim}
 def $iadd(N, iN(N), iN(N)) : iN(N)
 def $isub(N, iN(N), iN(N)) : iN(N)
 def $imul(N, iN(N), iN(N)) : iN(N)
 
-rule Step/binop-add-i32:
-  z; (CONST I32 c_1) (CONST I32 c_2) (BINOP I32 ADD)  ~>  z; (CONST I32 c)
-  -- if $iadd(32, c_1, c_2) = c
-rule Step/binop-add-i64:
-  z; (CONST I64 c_1) (CONST I64 c_2) (BINOP I64 ADD)  ~>  z; (CONST I64 c)
-  -- if $iadd(64, c_1, c_2) = c
+def $binop(valtype, binop_(valtype), val_(valtype), val_(valtype)) : val_(valtype)*
+def $binop(t, ADD, c_1, c_2) = $iadd($size(t), c_1, c_2)
+def $binop(t, SUB, c_1, c_2) = $isub($size(t), c_1, c_2)
+def $binop(t, MUL, c_1, c_2) = $imul($size(t), c_1, c_2)
 
-rule Step/binop-sub-i32:
-  z; (CONST I32 c_1) (CONST I32 c_2) (BINOP I32 SUB)  ~>  z; (CONST I32 c)
-  -- if $isub(32, c_1, c_2) = c
-rule Step/binop-sub-i64:
-  z; (CONST I64 c_1) (CONST I64 c_2) (BINOP I64 SUB)  ~>  z; (CONST I64 c)
-  -- if $isub(64, c_1, c_2) = c
-
-rule Step/binop-mul-i32:
-  z; (CONST I32 c_1) (CONST I32 c_2) (BINOP I32 MUL)  ~>  z; (CONST I32 c)
-  -- if $imul(32, c_1, c_2) = c
-rule Step/binop-mul-i64:
-  z; (CONST I64 c_1) (CONST I64 c_2) (BINOP I64 MUL)  ~>  z; (CONST I64 c)
-  -- if $imul(64, c_1, c_2) = c
-
+rule Step/binop:
+  z; (CONST t c_1) (CONST t c_2) (BINOP t binop)  ~>  z; (CONST t c)
+  -- if $binop(t, binop, c_1, c_2) = c
 	\end{lcverbatim}
 }
-
-\begin{lcverbatim}
-def $binop(valtype, binop_(valtype), val_(valtype), val_(valtype)) : val_(valtype)*
-hint(show %2#$_(%1)#(%3, %4))
-
-def $iadd(N, iN(N), iN(N)) : iN(N)      hint(show $iadd_(%,%,%))
-def $isub(N, iN(N), iN(N)) : iN(N)      hint(show $isub_(%,%,%))
-def $imul(N, iN(N), iN(N)) : iN(N)      hint(show $imul_(%,%,%))
-
-def $binop(Inn, ADD, iN_1, iN_2) = $iadd($size(Inn), iN_1, iN_2)
-def $binop(Inn, SUB, iN_1, iN_2) = $isub($size(Inn), iN_1, iN_2)
-def $binop(Inn, MUL, iN_1, iN_2) = $imul($size(Inn), iN_1, iN_2)
-
-rule Step/binop-val:
-  z; (CONST t c_1) (CONST t c_2) (BINOP t binop)  ~>  z; (CONST t c)
-  -- if $binop(t, binop, c_1, c_2) = c  ;; TODO
-
-rule Step/binop-trap:
-  z; (CONST t c_1) (CONST t c_2) (BINOP t binop)  ~>  z; TRAP
-  -- if $binop(t, binop, c_1, c_2) = eps  ;; TODO
-\end{lcverbatim}
 
 
 \begin{lcverbatim}
