--- a/spectec/tutorial/tutorial.tex
+++ b/spectec/tutorial/tutorial.tex
@@ -368,7 +368,7 @@ rule Step/drop:
 }
 
 \subsection{\K{SELECT}}
-If we get \K{BINOP} from stack, then we have two cases: condition is true or false. \\
+If we get \K{SELECT} from stack, then we have two cases: condition is true or false. \\
 Define each of the case as seperate rule as following:
 \begin{lcverbatim}
 rule Step/select-true:
