--- a/spectec/tutorial/tutorial.tex
+++ b/spectec/tutorial/tutorial.tex
@@ -341,7 +341,7 @@ rule Step/<rule name>:
   ...
   -- if <condition>
 \end{lcverbatim}
-This means that if every \K{condition}s are satisfied, then the state and instructions from stack is reduced to the right hand side. There may be no conditions. \\
+This means that if every \K{condition} is satisfied, then the state and instructions from stack is reduced to the right hand side. There may be no conditions. \\
 Now we'll declare each of the reduction rules one by one.
 
 \subsection{\K{NOP}}
